--- a/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
@@ -64,8 +64,8 @@
             </div>
             <div class="form-group">
                 <center>
-                    <button type="submit" class="btn btn-primary">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>
-                    <a href="@Url.Action("Index","Regalo")" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></a>
+                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-save"></span> Guardar cambios</button>
+                    <a href="@Url.Action("Index","Regalo")" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Cancelar</a>
                 </center>
             </div>
         </div>
