--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -7,19 +7,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var nombre = "";
     inf245netsoft db = new inf245netsoft();
-    
-    
-    
 }
 
-<script src="~/Scripts/jquery-2.1.4.min.js"></script>
-
-<!--
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
--->
-
 <div class="container-fluid">
-    <div class="col-md-5">
+    <div class="col-md-3">
         <ol class="breadcrumb">
             <li class="active">Mantenimiento de eventos</li>
         </ol>
@@ -29,17 +20,17 @@
     <div class="row">
         <div class="col-md-4 col-sm-12">
             <div class="form-group">
-                <a class="btn btn-primary" href="@Url.Action("DatosGenerales", "Evento")">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                <a class="btn btn-primary" onclick="modificaEvento()">Modificar <span class="glyphicon glyphicon-pencil"></span></a>
-                <a class="btn btn-primary" onclick="redirigeAsiento()">Asientos <span class="glyphicon glyphicon-equalizer"></span></a>
+                <a class="btn btn-success" href="@Url.Action("DatosGenerales", "Evento")"><span class="glyphicon glyphicon-plus"></span> Nuevo</a>
+                <a class="btn btn-primary" onclick="modificaEvento()"><span class="glyphicon glyphicon-pencil"></span> Modificar</a>
+                <a class="btn btn-primary" onclick="redirigeAsiento()"><span class="glyphicon glyphicon-equalizer"></span> Asientos</a>
             </div>
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-8 col-sm-12">
             <div class="form-group">
                 @Html.Hidden("idEventoT")
-                <a class="btn btn-primary" onclick="redirigePromocion()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
-                <a class="btn btn-warning" onclick="redirigePostergar()">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
-                <a class="btn btn-warning" onclick="redirigeCancelar()">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
+                <a class="btn btn-primary" onclick="redirigePromocion()"><span class="glyphicon glyphicon-tags"></span> Promociones</a>
+                <a class="btn btn-warning" onclick="redirigePostergar()"><span class="glyphicon glyphicon-calendar"></span> Postergar</a>
+                <a class="btn btn-warning" onclick="redirigeCancelar()"><span class="glyphicon glyphicon-remove-sign"></span> Cancelar</a>
                @if (User.IsInRole("Promotor") || User.IsInRole("Administrador"))
                {
                 <a class="btn btn-success" onclick="redirigeReservaOrganizador()">Reserva Organizador<span class="glyphicon glyphicon-flag"> </a>
@@ -47,9 +38,7 @@
                 }
             </div>
         </div>
-        <div class="col-md-2 col-sm-12" style="text-align:center">
-            @*<a class="btn btn-danger" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
-        </div>
+        
     </div><br>
     <div class="row">
         <div class="col-md-10 ">
@@ -58,7 +47,7 @@
                 {
                     <div class="form-group">
                         <div class="input-group">
-                            @Html.TextBox("nombre", "", new { placeholder = "INGRESE EVENTO", @class = "form-control" })
+                            @Html.TextBox("nombre", "", new { placeholder = "Buscar evento por nombre...", @class = "form-control" })
                             <span class="input-group-btn"><a id="btn-search" class="btn btn-primary" onclick="submitSearch()"><span class="glyphicon glyphicon-search"></span></a></span>
                         </div>
                     </div>
@@ -244,6 +233,7 @@
         </div>
     </div>
 </div>
+@section scripts{
 <script>
     $(document).ready(function () {
         /*
@@ -464,10 +454,7 @@
             evento = "";
         }
     }
-</script>
+                               </script>
+}
 
-<style>
-    .trselected {
-        background: gray;
-    }
-</style>
+
