correcion en funciones

--- a/WebApplication4/WebApplication4/Views/Evento/Funciones.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Funciones.cshtml
@@ -24,7 +24,7 @@
         <div class="form-group col-md-12">
             <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="agregaFuncion()">Agregar función  <span class="glyphicon glyphicon-plus"></span></button>
             <button id="btnAgregarFuncion" type="button" class="btn btn-primary" onclick="eliminarFuncion()">Quitar función <span class="glyphicon glyphicon-remove"></span></button>
-            <button type="submit" class="btn btn-primary" style="float: right;" onclick="guardarFunciones()">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
+            <button type="submit" class="btn btn-primary" style="float: right;" onclick="return guardarFunciones()">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
         </div><br /><br />
 
         <div id="funciones" class="container">
