--- a/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
@@ -124,6 +124,7 @@
                                                 <th>DNI del Vendedor</th>
                                                 <th>Nombre del Vendedor</th>
                                                 <th>Punto de Venta</th>
+                                                <th>Total Devuelto</th>
                                                 <th>Total</th>
                                             </tr>
                                             <tbody id="tbody">
@@ -134,6 +135,7 @@
                                                     <td>@row.codigo</td>
                                                     <td>@row.nombre</td>
                                                     <td>@row.punto</td>
+                                                    <td>@row.devtotal</td>
                                                     <td>@row.total</td>
                                                 </tr>
                                                 }
